styles(orga): Avoid campaign without any space ou dash to overlap other cells

--- a/orga/app/styles/components/campaign/list.scss
+++ b/orga/app/styles/components/campaign/list.scss
@@ -1,10 +1,11 @@
 .campaign-list {
   padding: 0;
 
-  &__campaign-link {
+  &__campaign-link-cell {
     display: flex;
     gap: var(--pix-spacing-2x);
     align-items: center;
+    word-break: break-all;
   }
 
   &__item {
